// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ConfirmButton ui button and icon: Component: ConfirmButton => ui => button and icon 1`] = `
<div
  style={
    Object {
      "display": "block",
    }
  }
>
  <Button
    color="danger"
    icon="delete"
    inProgress={false}
    onClick={[Function]}
  >
    Delete user
  </Button>
  <ConfirmModal
    isOpen={false}
    modalText={
      <p>
        Are you sure you want to 
        <strong>
          delete
        </strong>
         the user?
      </p>
    }
    onClose={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`Component: ConfirmButton ui custom class, color and texts: Component: ConfirmButton => ui => custom color and texts 1`] = `
<div
  className="bigger-better-and-uncut"
  style={
    Object {
      "display": "block",
    }
  }
>
  <Button
    color="info"
    icon="delete"
    inProgress={false}
    onClick={[Function]}
  >
    Delete user
  </Button>
  <ConfirmModal
    cancelText="NO"
    confirmText="YES"
    isOpen={false}
    label="PLEASE SAY YES"
    modalText={
      <p>
        Are you sure you want to 
        <strong>
          delete
        </strong>
         the user?
      </p>
    }
    onClose={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`Component: ConfirmButton ui only button: Component: ConfirmButton => ui => only button 1`] = `
<div
  style={
    Object {
      "display": "block",
    }
  }
>
  <Button
    color="danger"
    inProgress={false}
    onClick={[Function]}
  >
    Delete user
  </Button>
  <ConfirmModal
    isOpen={false}
    modalText={
      <p>
        Are you sure you want to 
        <strong>
          delete
        </strong>
         the user?
      </p>
    }
    onClose={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`Component: ConfirmButton ui only icon in progress: Component: ConfirmButton => ui => only icon in progress 1`] = `
<div
  style={
    Object {
      "display": "inline",
    }
  }
>
  <Button
    color="danger"
    icon="delete"
    inProgress={true}
    onClick={[Function]}
  />
  <ConfirmModal
    isOpen={false}
    modalText={
      <p>
        Are you sure you want to 
        <strong>
          delete
        </strong>
         the user?
      </p>
    }
    onClose={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`Component: ConfirmButton ui only icon: Component: ConfirmButton => ui => only icon 1`] = `
<div
  style={
    Object {
      "display": "inline",
    }
  }
>
  <Button
    color="danger"
    icon="delete"
    inProgress={false}
    onClick={[Function]}
  />
  <ConfirmModal
    isOpen={false}
    modalText={
      <p>
        Are you sure you want to 
        <strong>
          delete
        </strong>
         the user?
      </p>
    }
    onClose={[Function]}
    onSave={[Function]}
  />
</div>
`;
